syntax = "proto3";
package simple_push;

service SimplePush {
  rpc PushRecord(PushRecordRequest) returns (PushRecordReply);
}

message PushRecordRequest {
  uint64 request_id = 1;
  string key = 2;
  string value = 3;
}

message PushRecordReply {
  uint64 request_id = 1;
  bool success = 2;
}
